<resources>
    <string name="app_name">ForgetheArena</string>
    <string name="title_activity_sprite_sheet_animation">SpriteSheetAnimation</string>
    <string name="title_activity_handle_sign_in">HandleSignIn</string>
    <string name="title_activity_login">Forge the Arena</string>

    <string name="auth_failed">authorization failed</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>

    <string name="reforge_text">Reforge Weapon</string>

    <string name="user_edit_text">Character Name:</string>
    <string name="email_edit_text">Email</string>
    <string name="password_edit_text">Password</string>
    <string name="title_activity_customize_character">CustomizeCharacterActivity</string>

    <string name="outfit_change_text">Change Outfit</string>
    <string name="weapon_change_text">Change Weapon</string>
    <string name="stat_change_text">Change Stats</string>
    <string name="title_activity_load_from_database">LoadFromDatabase</string>

    <string name="go_to_battle_text">Go To Battle</string>
    <string name="go_to_customize_screen">Customize Character</string>
    <string name="go_to_pvp_text">Go To Battle\n(PvP)</string>
    <string name="go_to_leaderboard">View Leaderboard</string>
    <string name="go_to_shop">Go To Shop</string>
    <string name="go_to_reforge">Reforge Weapon</string>

    <string name="title_activity_reforge_weapon">ReforgeWeaponActivity</string>

    <string name="lock_durability">Lock\nDurabiliy</string>
    <string name="lock_toughness">Lock\nToughtness</string>
    <string name="lock_power">Lock\nPower</string>
    <string name="lock_speed">Lock\nSpeed</string>
    <string name="lock_elemental_force">Lock\nElemental\nForce</string>
    <string name="lock_elemental_resist">Lock\nElemental\nResist</string>
    <string name="title_activity_purchase_items">PurchaseItemsActivity</string>


    <string name="buy_weapons">Buy\n Weapons</string>
    <string name="buy_amulets">Buy\nAmulets</string>
    <string name="buy_outfits">Buy\nOutfits</string>
    <string name="cash_shop">Cash\nShop</string>

</resources>

