<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="doophie.forgethearena.CustomizeCharacterActivity"
    android:orientation="vertical"
    android:id="@+id/customcharacterinterface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hello?"
            android:id="@+id/saveDisplay"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_edit_text"/>

        <EditText
            android:id="@+id/DisplayEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/outfit_change_button"
            android:text="@string/outfit_change_text"
            android:onClick="onClick"
            android:layout_height="match_parent" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/weapons_change_button"
            android:text="@string/weapon_change_text"
            android:onClick="onClick"
            android:layout_height="match_parent" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/stats_change_button"
            android:text="@string/stat_change_text"
            android:onClick="onClick"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/customize_things_zone">
    </LinearLayout>

</LinearLayout>
